# ingestion-pipeline-simple

./: .gitignore  README.md  compose.yml  pyproject.toml
database/: db_utils.py  dummy.db
scripts/: init-s3.sh
src/ingestion_pipeline_simple/: definitions.py
src/ingestion_pipeline_simple/defs/: assets.py  resources.py  sensors.py
src/ingestion_pipeline_simple/defs/assets/: binary_files.py  document_chunks.py  json_files.py  plain_text_files.py  vector_embeddings.py
src/ingestion_pipeline_simple/defs/sensors/: file_monitor.py
src/ingestion_pipeline_simple/utils/: db_utils.py  list_s3_buckets.py
test_bucket/: handle_files.py  list_s3_buckets.py
test_bucket/cache/: machine.json
tests/: def_tests.py  sensor_tests.py  test_sensors.py
